--- a/Assets/WebGLTemplates/PluginYG/index.html
+++ b/Assets/WebGLTemplates/PluginYG/index.html
@@ -787,7 +787,7 @@
                     console.log('Shortcut created?:', result);
                     if (result.outcome === 'accepted') {
                         console.log('Prompt Success');
-                        myGameInstance.SendMessage('YandexGame', 'OnPromptSuccess');
+                        //myGameInstance.SendMessage('YandexGame', 'OnPromptSuccess');
                     }
                 });
         } catch (e) {
